# VYUHA-LOG

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  drizzle.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  updater-private.key.pub  vitest.config.ts
.claude/: launch.json
app/: globals.css  layout.tsx  page.tsx
components/: kpi-card.tsx  placeholder.tsx
docs/: CODE_SIGNING.md  GETTING_STARTED_DECK.html  INSTALLATION_GUIDE.md  INSTITUTIONAL_GRADE_ROADMAP.md
drizzle/: 0000_redundant_silver_fox.sql  0001_small_edwin_jarvis.sql  0002_outgoing_galactus.sql  0003_unusual_zaladane.sql  0004_illegal_arachne.sql  0005_warm_the_leader.sql  0006_cooing_santa_claus.sql  0007_tough_lifeguard.sql  0008_ancient_lifeguard.sql  0009_smart_bedlam.sql  0010_far_wolfsbane.sql  0011_white_jasper_sitwell.sql  0012_smooth_lizard.sql  0013_lively_tempest.sql  0014_shallow_purple_man.sql  0015_glamorous_warpath.sql  0016_paise-columns.sql  0017_drop-real-money.sql  0018_margin-config.sql  0019_trade-attachments.sql  0020_broker-connections.sql  0021_mtf-funded-amount.sql  0022_margin-broker-specific.sql  0023_auto-mtm-settings.sql  0024_trial-and-indexes.sql  0025_accent-skin.sql  0026_uneven_cardiac.sql
e2e/: helpers.ts  import-dashboard.spec.ts  prepare-db.ts  rom-and-drilldown.spec.ts  staged-position.spec.ts
lib/: audit.ts  backup-format.ts  backup.ts  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.signed.conf.json
src-tauri/icons/: icon.icns
src-tauri/loading/: index.html
src-tauri/src/: lib.rs  main.rs
(+337 files in other folders)
