[package]
name = "vyuha"
version = "1.40.0"
description = "Vyuha — local trade journal"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vyuha_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
